--- a/app.yaml
+++ b/app.yaml
@@ -18,23 +18,25 @@
 # [START gaestd_py_django_app_yaml]
 runtime: python311
 
+instance_class: F1
+
 env_variables:
   # This setting is used in settings.py to configure your ALLOWED_HOSTS
   APPENGINE_URL: youtube-rewind-410800.uc.r.appspot.com
 
 handlers:
-# This configures Google App Engine to serve the files in the app's static
-# directory.
-- url: /static
-  static_dir: frontend/static/
-  
-- url : /api/   #backend
-  script: python3 manage.py runserver  
+  # This configures Google App Engine to serve the files in the app's static
+  # directory.
+  - url: /static
+    static_dir: frontend/static/
 
-# This handler routes all requests not caught above to your main app. It is
-# required when static routes are defined, but can be omitted (along with
-# the entire handlers section) when there are no static files defined.
-- url: /.*
-  script: auto
+  - url: /api/ #backend
+    script: python3 manage.py runserver
+
+  # This handler routes all requests not caught above to your main app. It is
+  # required when static routes are defined, but can be omitted (along with
+  # the entire handlers section) when there are no static files defined.
+  - url: /.*
+    script: auto
 # [END gaestd_py_django_app_yaml]
 # [END django_app]
