--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,29 @@
 asgiref==3.7.2
+beautifulsoup4==4.12.2
 cachetools==5.3.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 Django==5.0
 django-environ==0.10.0
 djangorestframework==3.14.0
+django-storages==1.14.2
 google-api-core==2.15.0
 google-auth==2.26.2
 google-cloud-secret-manager==2.16.1
 googleapis-common-protos==1.62.0
+google-cloud-storage==2.14.0
 grpc-google-iam-v1==0.13.0
 grpcio==1.60.0
 grpcio-status==1.60.0
 idna==3.6
+lxml==5.1.0
 proto-plus==1.23.0
 protobuf==4.25.2
 psycopg2-binary==2.9.9
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pytz==2023.3.post1
+psutil==5.9.8
 requests==2.31.0
 rsa==4.9
 sqlparse==0.4.4
