--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ grpc-google-iam-v1==0.13.0
 grpcio==1.60.0
 grpcio-status==1.60.0
 idna==3.6
+ijson==3.2.3
 lxml==5.1.0
 proto-plus==1.23.0
 protobuf==4.25.2
